# standalone_wasm_example

./: .gitignore  Cargo.toml  README.md  runme.bash
client/: Cargo.toml
client/src/: lib.rs
src/: main.rs
