[package]
name = "standalone_wasmer_example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
httparse = "1.4.1"
reqwest = { version = "0.11.4", features = ["blocking"] }
serde = { version = "1.0.126", features = ["derive"] }
wasmer-runtime = "0.17.1"
wasmer-runtime-core = "0.17.1"
